--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
         "format:staged": "d2-style apply --staged"
     },
     "devDependencies": {
-        "@dhis2/cli-app-scripts": "^12.0.0-alpha.17",
-        "@dhis2/cli-style": "^10.7.4",
+        "@dhis2/cli-app-scripts": "^12.3.0",
+        "@dhis2/cli-style": "^10.7.6",
         "@types/jest": "^29.5.13",
         "@typescript-eslint/eslint-plugin": "^8.7.0",
         "@typescript-eslint/parser": "^8.7.0",
@@ -25,7 +25,8 @@
         "typescript": "^5.6.2"
     },
     "dependencies": {
-        "@dhis2/app-runtime": "^3.11.0"
+        "@dhis2/app-runtime": "^3.13.1",
+        "@dhis2/ui": "^10.1.11"
     },
     "resolutions": {
         "eslint": "^8"
