chore: setup husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
         "deploy": "d2-app-scripts deploy",
         "tsc": "tsc --noEmit",
         "lint": "yarn tsc && eslint && prettier -c .",
-        "lint:staged": "eslint --staged",
-        "format": "d2-style apply",
-        "format:staged": "d2-style apply --staged"
+        "prepare": "husky"
     },
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^12.3.0",
@@ -29,12 +27,20 @@
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "eslint": "^9.39.1",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.2.7",
         "prettier": "^3.7.3"
     },
     "dependencies": {
         "@dhis2/app-runtime": "^3.13.2",
         "@dhis2/ui": "^10.1.11",
         "react-router": "^7.2.0"
+    },
+    "lint-staged": {
+        "*": [
+            "yarn prettier . --write",
+            "yarn lint"
+        ]
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
