--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^12.3.0",
         "@dhis2/cli-style": "^10.7.6",
-        "@dhis2/config-eslint": "^0.1.1",
+        "@dhis2/config-eslint": "^0.2.1",
         "@dhis2/config-prettier": "^0.2.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
@@ -36,11 +36,11 @@
         "@dhis2/ui": "^10.1.11",
         "react-router": "^7.2.0"
     },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "lint-staged": {
         "*": [
             "yarn prettier . --write",
             "yarn lint"
         ]
-    },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    }
 }
